reports/08.05-Try-Except-Statements.log
Traceback (most recent call last):
  File "/Users/phil/a50037/envs/june22/lib/python3.7/site-packages/jupyter_cache/executors/basic.py", line 163, in execute
    executenb(nb_bundle.nb, cwd=tmpdirname, timeout=timeout)
  File "/Users/phil/a50037/envs/june22/lib/python3.7/site-packages/nbconvert/preprocessors/execute.py", line 737, in executenb
    return ep.preprocess(nb, resources, km=km)[0]
  File "/Users/phil/a50037/envs/june22/lib/python3.7/site-packages/nbconvert/preprocessors/execute.py", line 405, in preprocess
    nb, resources = super(ExecutePreprocessor, self).preprocess(nb, resources)
  File "/Users/phil/a50037/envs/june22/lib/python3.7/site-packages/nbconvert/preprocessors/base.py", line 69, in preprocess
    nb.cells[index], resources = self.preprocess_cell(cell, resources, index)
  File "/Users/phil/a50037/envs/june22/lib/python3.7/site-packages/nbconvert/preprocessors/execute.py", line 448, in preprocess_cell
    raise CellExecutionError.from_cell_and_msg(cell, out)
nbconvert.preprocessors.execute.CellExecutionError: An error occurred while executing the following cell:
------------------
string = "problem solving
------------------

[0;36m  File [0;32m"<ipython-input-1-4c037f6284bc>"[0;36m, line [0;32m1[0m
[0;31m    string = "problem solving[0m
[0m                             ^[0m
[0;31mSyntaxError[0m[0;31m:[0m EOL while scanning string literal

SyntaxError: EOL while scanning string literal (<ipython-input-1-4c037f6284bc>, line 1)

